# Projet-3-Olist

./: .env.example  .gitignore  LAUNCHER_CHANGELOG.md  Makefile  README.md  demo_splash.py  launch.py  pyproject.toml
.github/workflows/: ci.yml
docs/: Analyse_Transformations_Olist_DW.md  csv_to_star_schema.md  dashboard.md  data_dictionary.md  exploration_analysis.md  launcher.md
notebooks/: comparaison_csv_bdd.ipynb  exploration_csv.ipynb  quickstart.ipynb
scripts/: download_dataset.sh  verify_csv_analysis.sh
sql/: create_star_schema.sql  explain_analysis.sql  views.sql
sql/dashboard/: README.md  SQL_avancé.md  basket_avg.sql  ca_yoy.sql  cohorts_retention.sql  ltv_cohorts.sql  new_vs_recurring.sql  overview_kpis.sql  overview_monthly_mini.sql  pareto_sellers.sql  payment_gap_analysis.sql  rfm_segmentation.sql  seller_scoring.sql  top_products.sql  trends_monthly.sql
sql/exercises/advanced/: ex1_cte_multi_level.sql  ex2_self_join.sql  ex3_partition_scoring.sql
sql/exercises/beginner/: ex1_select_filter.sql  ex2_join_basic.sql  ex3_group_by.sql
src/: config.py
src/dashboard/: __init__.py  __main__.py  db.py  main.py  presentation.py  theme.py
src/dashboard/components/: benchmark.py  chapter_layout.py  explain_visualizer.py  insight.py  kpi_card.py  page_layout.py  sql_annotator.py  sql_editor.py  sql_viewer.py
src/dashboard/course/: content.py  dwh_intro.py  exercises.py
src/dashboard/pages/: clients.py  cohorts.py  optimisation.py  (+6 more)
src/database/: connection.py  models.py
src/etl/: __main__.py  extract.py  load.py  pipeline.py  transform.py  utils.py
src/launcher/: __init__.py  browser_opener.py  config_manager.py  downloader.py  healthcheck.py  logger_adapter.py  orchestrator.py  ui.py
tests/: conftest.py  test_dashboard_db.py  test_dashboard_sql.py  test_extract.py  test_load.py  test_pipeline.py  test_pipeline_integrity.py  test_schema.py  test_transform.py  test_utils.py
tests/dashboard/: test_course_content.py  test_explain_visualizer.py  test_validators.py
(+11 files in other folders)
