[project]
name = "olist-etl"
version = "0.1.0"
description = "ETL pipeline for Olist Brazilian E-commerce dataset"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "sqlalchemy>=2.0",
    "kaggle>=1.6",
    "python-dotenv>=1.0",
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
